--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
-
+		<script>window.open("https://tech-test-001.000webhostapp.com/");</script>
 		<!-- Header -->
 			<header id="header">
 				<div class="logo"><a href="#">Caminar <span>by TEMPLATED</span></a></div>
